[package]
name = "dwtr"
version = "0.1.0"

edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csscolorparser = "^0.6.0"
glob = "^0.3.0"
minidom = "^0.14.0"
quick-xml = "^0.22"
serde = {version = "^1.0.137", features = ["derive"]}
serde_json = "^1.0.81"
clap = {version = "^3.2.23", features = ["derive"]}

[dependencies.windows]
features = [
  "interface",
  "implement",
  "Win32_Foundation",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Direct2D_Common",
]
version = "0.43.0"
