[package]
name = "dwtr"
version = "0.1.0"

edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^3.2.23", features = ["derive"]}
csscolorparser = "^0.6.2"
glob = "^0.3.0"
quick-xml = "^0.28.2"
serde = {version = "^1.0.137", features = ["derive"]}
serde_json = "^1.0.81"
svg = "^0.13.1"

[dependencies.windows]
features = [
  "implement",
  "Win32_Foundation",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Direct2D_Common",
]
version = "0.48.0"
